@@ -113,6 +113,7 @@
     <Compile Include="DefaultKernel.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Exceptions\CircularDependecyException.cs" />
     <Compile Include="Exceptions\ComponentNotFoundException.cs">
       <SubType>Code</SubType>
     </Compile>
